# soniclink

./: .gitignore  README.md  pyproject.toml
acoustic_modem/: cli.py  config.py  dsp.py  framing.py  reporting.py  rx.py  sync.py  tx.py  types.py
tests/: support.py  test_cli.py  test_cli_rx.py  test_config.py  test_crc.py  test_framing.py  test_goertzel.py  test_negative_cases.py  test_roundtrip_phone.py  test_roundtrip_synthetic.py  test_sync.py  test_tx_waveform.py
