[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "soniclink"
version = "0.1.0"
description = "Acoustic modem reference implementation for SonicLink"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[tool.setuptools.packages.find]
include = ["acoustic_modem*"]
namespaces = true
